k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service   # change to "frontend" if that's your svc name
                port:
                  number: 80           # change to 80 if your frontend svc is 80


          # APIs -> rewrite /api/user/<x> to /<x>
          - path: /api/user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3001

          - path: /api/product(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 3002

          - path: /api/cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-service
                port:
                  number: 3003

          - path: /api/order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 3004
